--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     <script src="./js/video.js" defer></script>
 </head>
 <body>
+    
     <!-- 시계 관련 html -->
     <div class="js-clock">
-        <h1></h1>
+        <!-- 시계정보 동적 -->
+        <h1></h1> 
     </div>
     <!-- 할일 입력을 받는 폼 -->
     <div class="js-todo">
